--- a/config/database.yml
+++ b/config/database.yml
@@ -23,7 +23,7 @@ default: &default
 
 development:
   <<: *default
-  database: starter_setup_development
+  database: Shopping_list_app_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -57,7 +57,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: starter_setup_test
+  database: Shopping_list_app_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -80,6 +80,6 @@ test:
 #
 production:
   <<: *default
-  database: starter_setup_production
-  username: starter_setup
-  password: <%= ENV['STARTER_SETUP_DATABASE_PASSWORD'] %>
+  database: Shopping_list_app_production
+  username: Shopping_list_app
+  password: <%= ENV['SHOPPING_LIST_APP_DATABASE_PASSWORD'] %>
